--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -5,11 +5,12 @@
     text-align: left;
     text-transform: uppercase;
     letter-spacing: 0.5rem;
-    font-size: 3rem;
-    text-shadow: 0.5rem 0.5rem $mid;
+    font-size: 2.5rem;
+    text-shadow: 0.3rem 0.3rem $mid;
 
-    @media screen and (min-width: 425px) {
+    @media screen and (min-width: 435px) {
         font-size: 4rem;
+        text-shadow: 0.5rem 0.5rem $mid;
     }
 }
 
